Alteração de Interface.
Adaptação de interface para receber novo contador de prod.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
-    <link rel="shortcut icon" href="assets/favicon.png" />
     <!--CSS -->
     <link rel="stylesheet" href="css/main.css">
-    <!--JS-->
+    <link rel="shortcut icon" href="assets/favicon.png" />
     <title>Clear Prod System</title>
 </head>
 <style>
@@ -86,6 +85,7 @@
             <section class="video-container">
               <video src="assets/background.mp4" autoplay loop playsinline muted></video>
               <div class="callout">
+                
                 <div class="container">
                   <div class="row">
                       <div class="col-sm-8">
@@ -98,10 +98,9 @@
                       <div class="col-sm-3 btn_left">
                         <button onclick="kiosk()" type="button" class="btn_homepage btn btn-primary">Começar agora</button>
                       </div>
-                      <div class="col-sm-9 btn_left">
-                        <a target="blank" href="//github.com/BrazilianBug/Prod-Zen" ><img class="img_git" src="assets/github.png"></a>
+                      <div class="col-sm-8 btn_left">
+                        <a target="blank" href="//github.com/BrazilianBug/Prod-Zen" ></a><img class="img_git" src="assets/github.png"></a>
                       </div>
-                      
             </section>
           </div>
     <script>
