--- a/contador.html
+++ b/contador.html
@@ -34,7 +34,7 @@
 
             <div class="container justify-content-center">
                 <div class="col-auto">
-                    <h1>13h00</h1>
+                    <h1 id="timeText"></h1>
                 </div>
             </div>
 
