Simple Interface and Functionality Changes
Algumas alterações visuais simples nos botões.

Os botões agora copiam os textos conforme o planejado.

--- a/contador.html
+++ b/contador.html
@@ -26,9 +26,10 @@
                     <h3>Tema claro</h3>
                 </label>
             </div>
+            </div>
         </div>
     </section>
-
+ 
     <section id="13h">
         <div class="quadrado">
 
@@ -83,37 +84,37 @@
             <div class="container">
                 <div class="row">
                     <div class="col-auto d-flex flex-row-reverse justify-content-center">
-                        <button type="button" style="width:100%" class="btn tags fila" onclick="reset()">
+                        <button type="button" style="width:100%" class="btn tags fila" onclick="copyText(ovp)">
                             <h3>#OVP</h3>
                         </button>
                     </div>
                     <div class="col-auto d-flex flex-row-reverse justify-content-center">
-                        <button type="button" style="width:100%" class="btn tags fila" onclick="reset()">
+                        <button type="button" style="width:100%" class="btn tags fila" onclick="copyText(exp)">
                             <h3>#EXP</h3>
                         </button>
                     </div>
                 </div>
                 <div class="col-auto flex-row-reverse justify-content-center">
-                    <button type="button" style="width:100%" class="btn tags aprovado" onclick="reset()">
+                    <button type="button" style="width:100%" class="btn tags aprovado" onclick="copyText(approve)">
                         <h3>Aprovado</h3>
                     </button>
-                    <button type="button" style="width:100%" class="btn tags aprovado" onclick="reset()">
+                    <button type="button" style="width:100%" class="btn tags aprovado" onclick="copyText(website)">
                         <h3>Website</h3>
                     </button>
-                    <button type="button" style="width:100%" class="btn tags aprovado" onclick="reset()">
+                    <button type="button" style="width:100%" class="btn tags aprovado" onclick="copyText(app)">
                         <h3>App</h3>
                     </button>
-                    <button type="button" style="width:100%" class="btn tags aprovado" onclick="reset()">
-                        <h3>intermediario</h3>
+                    <button type="button" style="width:100%" class="btn tags aprovado" onclick="copyText(outros)">
+                        <h3>Canal de vendas</h3>
                     </button>
-                    <button type="button" style="width:100%" class="btn tags fraude" onclick="reset()">
+                    <button type="button" style="width:100%" class="btn tags fraude" onclick="copyText(fraude)">
                         <h3>Fraude</h3>
                     </button>
-                    <button type="button" style="width:100%" class="btn tags fraude" onclick="reset()">
+                    <button type="button" style="width:100%" class="btn tags fraude" onclick="copyText(fraude2)">
                         <h3>Não inf.
                             idade</h3>
                     </button>
-                    <button type="button" style="width:100%" class="btn tags cancelado" onclick="reset()">
+                    <button type="button" style="width:100%" class="btn tags cancelado" onclick="copyText(cancel)">
                         <h3>Cancelado</h3>
                     </button>
                 </div>
