Solved "Universal time-based productivity marker"

--- a/contador.html
+++ b/contador.html
@@ -55,17 +55,17 @@
                 <div class="row justify-content-md-center">
 
                     <div class="col-auto container justify-content-center">
-                        <button onclick="add('prod13h')" class="btn_13h_add green btn btn-outline">
+                        <button onclick="add()" class="btn_13h_add green btn btn-outline">
                             <img src="ASSETS/arrow-green.svg" alt="">
                         </button>
                     </div>
 
                     <div class="col-auto container justify-content-center">
-                        <h2 id="prod13h"></h2>
+                        <h2 id="localProd"></h2>
                     </div>
 
                     <div class="col-auto container justify-content-center">
-                        <button onclick="remove('prod13h')" class="btn_13h_remove red btn btn-outline">
+                        <button onclick="remove()" class="btn_13h_remove red btn btn-outline">
                             <img src="ASSETS/arrow-red.svg" alt="">
                         </button>
                     </div>
