--- a/contador.html
+++ b/contador.html
@@ -138,7 +138,7 @@
                 <h1 class="txt_tags">Histórico</h1>
             </div>
         <div class="justify-content-center align-items-center">
-            <select class="form-select">
+            <select id="prodHours" class="form-select" onchange="getProductivity()">
                     <option selected>Horário</option>
                     <option value="1">08h00</option>
                     <option value="2">09h00</option>
@@ -155,12 +155,14 @@
                     <option value="13">20h00</option>
                     <option value="14">21h00</option>
               </select>
-              <input id="input" type="text">
-              <button id="salvar" class="btn salvar"><h3>Salvar</h3></button>
+              <input id="input" type="number" min="0" max="999">
+              <button id="salvar" class="btn salvar" onclick="setProductivity()"><h3>Salvar</h3></button>
         </div>
         </div>
     </section>
-
+    <div class="alert alert-success" role="alert" style="display: none"  id="alert">
+        Alteração relizada
+      </div>
     <button type="button" class="tags fraude2 btn btn-outline-danger" onclick="reset()">Limpar valores</button>
 
     <footer>
