Solve "Reset" button does not work. #3

--- a/contador.html
+++ b/contador.html
@@ -154,7 +154,7 @@
     <div class="alert alert-success" role="alert" style="display: none"  id="alert">
         Alteração relizada
       </div>
-    <!--<button type="button" class="tags fraude2 btn btn-outline-danger" onclick="reset()">Limpar valores</button>-->
+    <button type="button" class="tags fraude2 btn btn-outline-danger" onclick="reset()">Limpar valores</button>
 
     <div class="col-sm-1 quadrado_theme">
         <h3 class="txt_theme">Temas</h3>
