--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
       height: 489px;
     }
     .title_homepage{
-        font-size: 110px;
+        font-size: 100px;
         text-align: left;
     }
     .subtitle_homepage{
         font-weight: 400;
         text-align: left;
-        font-size: 16px;
+        font-size: 14px;
         color: white;
+        padding-bottom: 50px;
     }
     .video-container {
     height: 100vh;
@@ -88,19 +89,15 @@
                 
                 <div class="container">
                   <div class="row">
-                      <div class="col-sm-8">
+                      <div class="col-md-7">
                         <h1 class="title_homepage">CLEAR PROD SYSTEM</h1>
                         <p class="subtitle_homepage">Um sistema simples e eficaz que visa oferecer agilidade e pariticidade ao usuário. O Clear Prod System está em fase de desenvolvimento, atualmente nossa interface se resume a diversas seções que são utilizadas para marcar a produtividade nos respectivos horários, em breve mudanças grandes de interface a fim de reduzir essas sessões em uma estarão chegando.</p>
-                      </div>
-                      <div class="col-sm-4">
-                        <img class="imghome" src="assets/homeicon.png">
-                      </div>
-                      <div class="col-sm-3 btn_left">
                         <button onclick="kiosk()" type="button" class="btn_homepage btn btn-primary">Começar agora</button>
+                        
                       </div>
-                      <div class="col-sm-8 btn_left">
-                        <a target="blank" href="//github.com/BrazilianBug/Prod-Zen" ></a><img class="img_git" src="assets/github.png"></a>
-                      </div>
+                      <div class="col-md-5">
+                        <img class="imghome" src="assets/homeicon.png">
+                      </div>>
             </section>
           </div>
     <script>
