--- a/contador.html
+++ b/contador.html
@@ -146,14 +146,13 @@
               </select>
               <input id="input" type="number" min="0" max="999">
               <button id="salvar" class="btn salvar" onclick="setProductivity()"><h3>Salvar</h3></button>
+              <p class="alert" style="display: none"  id="alert">Alteração realizada</p>
         </div>
-
+        <div class="alert alert-success" role="alert" style="display: none"  id="alert">
+            Alteração relizada
+          </div>
         </div>
     </section>
-    <div class="alert alert-success" role="alert" style="display: none"  id="alert">
-        Alteração relizada
-      </div>
-    <button type="button" class="tags fraude2 btn btn-outline-danger" onclick="reset()">Limpar valores</button>
 
     <div class="col-sm-1 quadrado_theme">
         <h3 class="txt_theme">Temas</h3>
@@ -163,6 +162,7 @@
             <option value="dracula">Dracula</option>
         </select>
     </div>
+    <button type="button" class="tags fraude2 btn btn-outline-danger" onclick="reset()">Limpar valores</button>
     <footer>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
