--- a/contador.html
+++ b/contador.html
@@ -55,7 +55,7 @@
 
                     <div class="col-auto container justify-content-center">
                         <button onclick="add()" class="btn_13h_add green btn btn-outline">
-                            <img src="ASSETS/arrow-green.svg" alt="">
+                            <img src="assets/arrow-green.svg" alt="">
                         </button>
                     </div>
 
@@ -65,7 +65,7 @@
 
                     <div class="col-auto container justify-content-center">
                         <button onclick="remove()" class="btn_13h_remove red btn btn-outline">
-                            <img src="ASSETS/arrow-red.svg" alt="">
+                            <img src="assets/arrow-red.svg" alt="">
                         </button>
                     </div>
 
