--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
       <div class="container">
         <div class="box box-1">
           <h1 class="title_homepage">CLEAR PROD SYSTEM</h1>
-          <p class="subtitle_homepage">Um sistema simples e eficaz que visa oferecer agilidade e pariticidade ao usuário. O Clear Prod System está em fase de desenvolvimento, atualmente nossa interface se resume a diversas seções que são utilizadas para marcar a produtividade nos respectivos horários, em breve mudanças grandes de interface a fim de reduzir essas sessões em uma estarão chegando.</p> 
+          <p class="subtitle_homepage">Um sistema simples e eficaz que visa oferecer agilidade e praticidade ao usuário. O Clear Prod System está em fase de desenvolvimento, atualmente nossa interface se resume a diversas seções que são utilizadas para marcar a produtividade nos respectivos horários, em breve mudanças grandes de interface a fim de reduzir essas sessões em uma estarão chegando.</p> 
+          
           <button onclick="kiosk()" type="button" class="btn_homepage btn btn-primary">Começar agora</button height>
         </div>
         <div class="box box-2">
-          <img class="img_home" src="assets/homeicon.svg" alt="">
+          <img class="img_home" src="assets/planet.png" alt="">
         </div>
         <div class="box box-3">
 
