--- a/index.html
+++ b/index.html
@@ -8,13 +8,31 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
+    <script src="https://kit.fontawesome.com/6477e2eb2d.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css">
     <!--CSS -->
-    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/homepage.css">
     <link rel="shortcut icon" href="assets/favicon.png" />
     <title>Clear Prod System</title>
 </head>
 <body>
+  <header></header>
+
+  <section class="section ">
+    <div class="columns is-vcentered">
+      <div class="column is-5 is-offset-1">
+        <h1 class="title is-1 has-text-left">Clear Prod System</h1>
+        <p class="subtitle is-5 has-text-left ">Um sistema simples e eficaz que visa oferecer agilidade e praticidade ao usuário. O Clear Prod System está em fase de desenvolvimento, atualmente nossa interface se resume a diversas seções que são utilizadas para marcar a produtividade nos respectivos horários, em breve mudanças grandes de interface a fim de reduzir essas sessões em uma estarão chegando.</p>
+        <button onclick="kiosk()" type="button" class="button has-text-left">Começar Agora</button>
+      </div>
+      <div class="column is-4">
+        <figure class="image">
+          <img  src="assets/planet1000.png">
+        </figure>
+      </div>
+    </div>
+  </section>
+  <!--
      <section id="home canvas" class="home">
       <div class="container">
         <div class="box box-1">
@@ -31,7 +49,7 @@
         </div>
     </div>
      </section>
-
+    -->
     <script>
         function kiosk() {
           window.open("contador.html", "", "width=260, height=1100");
