Interfaces Update - Final.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
 
 
     <title>Clear Prod System</title>
@@ -24,7 +27,10 @@
     <div class="columns is-vcentered">
       <div class="column is-5 is-offset-1">
         <h1 class="title is-1 has-text-left">Clear Prod System</h1>
-        <p class="subtitle is-5 has-text-left ">Um sistema simples e eficaz que visa oferecer agilidade e praticidade ao usuário. O Clear Prod System está em fase de desenvolvimento, atualmente nossa interface se resume a diversas seções que são utilizadas para marcar a produtividade nos respectivos horários, em breve mudanças grandes de interface a fim de reduzir essas sessões em uma estarão chegando.</p>
+        <p class="subtitle is-1 has-text-left ">intelligence<br> to offer_ <br>
+          <label for="" class="text-orange subtitle is-1 has-text-left"></label>
+        </p>
+        <br>
         <button onclick="kiosk()" type="button" class="button has-text-left">Começar Agora</button>
       </div>
       <div class="column is-4">
