--- a/contador2.html
+++ b/contador2.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Quicksand:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
-  <title>VIP</title>
+  <title>OTO</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -53,6 +53,23 @@
               </button>
             </div>
           </div>
+
+          <div class="flex-box2">
+            <div>
+              <button type="button" class="btn btn-success">Aprovado</button>
+            </div>
+
+            <div>
+              <!--TOTAL DE APROVADOS-->
+              <h2 id="localapproved">10</h2>
+            </div>
+			
+            <div>
+              <!--Porcentagem de aprovados-->
+              <h3 id="localPercentage">20%</h3>
+            </div>	
+          </div>
+          <br>
           <p>TOTAL DE PEDIDOS FINALIZADOS</p>
           <h2 id="txt_total"></h2>
         </div>
