--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
     <link rel="shortcut icon" href="assets/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
-
 
     <title>Clear Prod System</title>
 </head>
@@ -31,7 +29,8 @@
           <label for="" class="text-orange subtitle is-1 has-text-left"></label>
         </p>
         <br>
-        <button onclick="kiosk()" type="button" class="button has-text-left">Começar Agora</button>
+        <button onclick="kiosk()" type="button" class="button has-text-left">VIP</button>
+        <button onclick="kiosk2()" type="button" class="button has-text-left">Undefined</button>
       </div>
       <div class="column is-4">
         <figure class="image img-animate">
@@ -44,6 +43,9 @@
     <script>
         function kiosk() {
           window.open("contador.html", "", "width=260, height=1100");
+        }
+        function kiosk2() {
+          window.open("contador2.html", "", "width=260, height=1100");
         }
         </script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
